--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Sanjida Anjum</strong>.</h1>
+								<h1>Hi. I'm <strong>Sanjida Suchi</strong>.</h1>
 							</header>
-							<p>-Geospatial Researcher <br>-Remote Sensing Scientist<br><strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>-Geospatial Researcher <br>-Remote Sensing Scientist<br></p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
