--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 						
-								<h3>Abour Me</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>About Me</h3>
+								<p>I'm currently pursuing the Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth, a prestigious European study program focusing on Earth observation and geoinformation.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
