--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+						
+								<h3>Research Interest</h3>
+								<p>-GIS and EO for Disaster Risk Reduction<br>-EO for Sustainable Development and Urbanisation<br>-Geospatial Education and Communication<br> </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
