--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 								<p>I'm currently pursuing the <bold>Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth </bold>, a prestigious European study program focusing on Earth observation and geoinformation.</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div align="justify" class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 						
 								<h3>Research Interest</h3>
-								<p>-GIS and EO for Disaster Risk Reduction<br>-EO for Sustainable Development and Urbanisation<br>-Geospatial Education and Communication<br> </p>
+								<p>-GIS and EO for Disaster Risk Reduction<br>-EO for Sustainable Development and Urbanisation<br>-Geospatial Education and Communication<br>-Creation of user friendly maps and data bases </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
