--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<p>I'm currently pursuing the <bold>Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth </bold>, a prestigious European study program focusing on Earth observation and geoinformation.</p>
 							</section>
 						</div>
-						<div style="text-align: justify;" class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 						
 								<h3>Research Interest</h3>
