--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								
+								<h3>Objectives</h3>
+								<p>
+									-Pursue Ph.D. degree<br>
+									-Take part in research projects that are related to geosciences<br>
+									-Increase capacity for writing scientific articles<br>
+									-Skills in creation of maps and the analysis of data<br>
+								
+								</p>
 							</section>
 						</div>
 					</div>
