--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<section class="box style1">
 						
 								<h3>About Me</h3>
-								<p>I'm currently pursuing the <bold>Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth </bold>, a prestigious European study program focusing on Earth observation and geoinformation.</p>
+								<p>I'm currently pursuing the <bold>Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth </bold>, a prestigious European study program focusing on Earth observation, geoinformation and geodatascience.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
