--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<section class="box style1">
 						
 								<h3>About Me</h3>
-								<p>I'm currently pursuing the Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth, a prestigious European study program focusing on Earth observation, geoinformation, geodatascience and geovisualization.</p>
+								<p>I'm currently pursuing the <strong>Erasmus Mundus Joint Master (EMJM) in Copernicus Master in Digital Earth</strong>, a prestigious European study program focusing on Earth observation, geoinformation, geodatascience and geovisualization.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
