--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="https://sanjidasuchi.github.io/">View Project</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/01.png" alt="" /></a>
+								<h3><a href="Eyetracking.pdf">View Project</a></h3>
+								<p> To investigate participant attention and emotional responses using eye-tracking technology, focusing on visual stimuli presented through the map "Arctic Sea Ice Decline," and to analyze how participants interacted with map elements, particularly the legend and defined Areas of Interest (AOIs).</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
