--- a/index.html
+++ b/index.html
@@ -98,42 +98,36 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/02.png" alt="" /></a>
+								<h3><a href="Methods-in-Spatial-Analysis-Assignment_1.pdf">View Project</a></h3>
+								<p>For the first task, I need to determine how many tourist attractions are located within 5, 10, 15, and 20 minutes walking distance from my Salzburg address. To do this, I selected a location using the sketch point tool. Then, I analyzed the walking distance from the address for 5, 10, 15, and 20 minutes. The marked areas, as shown in the picture, represent my chosen place.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/03.png" alt="" /></a>
+								<h3><a href="EO-browser-Assignment.pdf">View Project</a></h3>
+								<p>To identify urban areas, vegetation, and water bodies within Salzburg city using Sentinel-2 data.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/04.png" alt="" /></a>
+								<h3><a href="Radar-Assignment-2.pdf">View Project</a></h3>
+								<p>The goal of is to apply the techniques learned in the practical session to generate a displacement map using Sentinel-1 SAR datasets for a new study site affected by a geohazard (e.g., landslide, volcanic activity, or even another earthquake). By creating a displacement map, we aim to visualize and quantify ground movement associated with this seismic event, contributing to a better understanding of geohazards and scientific workflows for monitoring them.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/05.png" alt="" /></a>
+								<h3><a href="Image-Segmentation-Assignment.pdf">View Project</a></h3>
+								<p>To evaluate and compare the effectiveness of image segmentation techniques in eCognition and ArcGIS Pro using Sentinel-2 imagery, determining which software provides superior image object delineation for specific project requirements.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
+
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -142,10 +136,7 @@
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
-					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
-					</header>
+
 					<div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
