--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Sanjida Suchi</strong>.</h1>
 							</header>
-							<p>-Geospatial Researcher <br>-Remote Sensing Scientist<br></p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<p>Geospatial Researcher</p>
+							
 						</div>
 					</div>
 				</div>
@@ -91,6 +91,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<p><strong>Eyetracking</strong></p>
 								<a href="#" class="image featured"><img src="images/01.png" alt="" /></a>
 								<h3><a href="Eyetracking.pdf">View Project</a></h3>
 								<p> To investigate participant attention and emotional responses using eye-tracking technology, focusing on visual stimuli presented through the map "Arctic Sea Ice Decline," and to analyze how participants interacted with map elements, particularly the legend and defined Areas of Interest (AOIs).</p>
@@ -100,21 +101,21 @@
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/02.png" alt="" /></a>
 								<h3><a href="Methods-in-Spatial-Analysis-Assignment_1.pdf">View Project</a></h3>
-								<p>For the first task, I need to determine how many tourist attractions are located within 5, 10, 15, and 20 minutes walking distance from my Salzburg address. To do this, I selected a location using the sketch point tool. Then, I analyzed the walking distance from the address for 5, 10, 15, and 20 minutes. The marked areas, as shown in the picture, represent my chosen place.</p>
+								<p>For the first task, I need to determine how many tourist attractions are located within 5, 10, 15, and 20 minutes walking distance from my Salzburg address. To do this, I selected a location using the sketch point tool. Then, I analyzed the walking distance from the address for 5, 10, 15, and 20 minutes.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/03.png" alt="" /></a>
 								<h3><a href="EO-browser-Assignment.pdf">View Project</a></h3>
-								<p>To identify urban areas, vegetation, and water bodies within Salzburg city using Sentinel-2 data.</p>
+								<p>To identify urban areas, vegetation, and water bodies within Salzburg city using Sentinel-2 data.Sentinel-2 imagery was selected for its high-resolution, multispectral capabilities, making it ideal for urban and environmental analysis. Custom scripts incorporating NDVI, NDWI and NDBI were utilized.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/04.png" alt="" /></a>
 								<h3><a href="Radar-Assignment-2.pdf">View Project</a></h3>
-								<p>The goal of is to apply the techniques learned in the practical session to generate a displacement map using Sentinel-1 SAR datasets for a new study site affected by a geohazard (e.g., landslide, volcanic activity, or even another earthquake). By creating a displacement map, we aim to visualize and quantify ground movement associated with this seismic event, contributing to a better understanding of geohazards and scientific workflows for monitoring them.</p>
+								<p>The goal of is to apply the techniques learned in the practical session to generate a displacement map using Sentinel-1 SAR datasets for a new study site affected by a geohazard (e.g., landslide, volcanic activity, or even another earthquake).</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
