--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<p><strong>Eyetracking</strong></p>
-								<a href="#" class="image featured"><img src="images/01.png" alt="" /></a>
+								<p><strong>Eyetracking</strong></p><br>
+								<a class="image featured"><img src="images/01.png" alt="" /></a>
 								<h3><a href="Eyetracking.pdf">View Project</a></h3>
 								<p> To investigate participant attention and emotional responses using eye-tracking technology, focusing on visual stimuli presented through the map "Arctic Sea Ice Decline," and to analyze how participants interacted with map elements, particularly the legend and defined Areas of Interest (AOIs).</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<p><strong>Spatial Analysis</strong></p>
+								<p><strong>Spatial Analysis</strong></p><br>
 								<a href="#" class="image featured"><img src="images/02.png" alt="" /></a>
 								<h3><a href="Methods-in-Spatial-Analysis-Assignment_1.pdf">View Project</a></h3>
 								<p>For the first task, I need to determine how many tourist attractions are located within 5, 10, 15, and 20 minutes walking distance from my Salzburg address. To do this, I selected a location using the sketch point tool. Then, I analyzed the walking distance from the address for 5, 10, 15, and 20 minutes.</p>
@@ -109,7 +109,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<p><strong>EO Browser Assignment</strong></p>
+								<p><strong>EO Browser Assignment</strong></p><br>
 								<a href="#" class="image featured"><img src="images/03.png" alt="" /></a>
 								<h3><a href="EO-browser-Assignment.pdf">View Project</a></h3>
 								<p>To identify urban areas, vegetation, and water bodies within Salzburg city using Sentinel-2 data.Sentinel-2 imagery was selected for its high-resolution, multispectral capabilities, making it ideal for urban and environmental analysis. Custom scripts incorporating NDVI, NDWI and NDBI were utilized.</p>
@@ -117,7 +117,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<p><strong>Radar Assignment</strong></p>
+								<p><strong>Radar Assignment</strong></p><br>
 								<a href="#" class="image featured"><img src="images/04.png" alt="" /></a>
 								<h3><a href="Radar-Assignment-2.pdf">View Project</a></h3>
 								<p>The goal of is to apply the techniques learned in the practical session to generate a displacement map using Sentinel-1 SAR datasets for a new study site affected by a geohazard (e.g., landslide, volcanic activity, or even another earthquake).</p>
@@ -125,7 +125,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<p><strong>Image Segmentation</strong></p>
+								<p><strong>Image Segmentation</strong></p><br>
 								
 								<a href="#" class="image featured"><img src="images/05.png" alt="" /></a>
 								<h3><a href="Image-Segmentation-Assignment.pdf">View Project</a></h3>
@@ -146,30 +146,7 @@
 				<div class="container medium">
 
 					<div class="row">
-						<div class="col-12">
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</div>
+
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
