--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#About Me">Work</a></li>
+					<li><a href="#Projects">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -102,7 +102,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<p><strong>Spatial Analysis</strong></p><br>
-								<a href="#" class="image featured"><img src="images/02.png" alt="" /></a>
+								<a class="image featured"><img src="images/02.png" alt="" /></a>
 								<h3><a href="Methods-in-Spatial-Analysis-Assignment_1.pdf">View Project</a></h3>
 								<p>For the first task, I need to determine how many tourist attractions are located within 5, 10, 15, and 20 minutes walking distance from my Salzburg address. To do this, I selected a location using the sketch point tool. Then, I analyzed the walking distance from the address for 5, 10, 15, and 20 minutes.</p>
 							</article>
@@ -110,7 +110,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<p><strong>EO Browser Assignment</strong></p><br>
-								<a href="#" class="image featured"><img src="images/03.png" alt="" /></a>
+								<a class="image featured"><img src="images/03.png" alt="" /></a>
 								<h3><a href="EO-browser-Assignment.pdf">View Project</a></h3>
 								<p>To identify urban areas, vegetation, and water bodies within Salzburg city using Sentinel-2 data.Sentinel-2 imagery was selected for its high-resolution, multispectral capabilities, making it ideal for urban and environmental analysis. Custom scripts incorporating NDVI, NDWI and NDBI were utilized.</p>
 							</article>
@@ -118,7 +118,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<p><strong>Radar Assignment</strong></p><br>
-								<a href="#" class="image featured"><img src="images/04.png" alt="" /></a>
+								<a class="image featured"><img src="images/04.png" alt="" /></a>
 								<h3><a href="Radar-Assignment-2.pdf">View Project</a></h3>
 								<p>The goal of is to apply the techniques learned in the practical session to generate a displacement map using Sentinel-1 SAR datasets for a new study site affected by a geohazard (e.g., landslide, volcanic activity, or even another earthquake).</p>
 							</article>
@@ -127,7 +127,7 @@
 							<article class="box style2">
 								<p><strong>Image Segmentation</strong></p><br>
 								
-								<a href="#" class="image featured"><img src="images/05.png" alt="" /></a>
+								<a class="image featured"><img src="images/05.png" alt="" /></a>
 								<h3><a href="Image-Segmentation-Assignment.pdf">View Project</a></h3>
 								<p>To evaluate and compare the effectiveness of image segmentation techniques in eCognition and ArcGIS Pro using Sentinel-2 imagery, determining which software provides superior image object delineation for specific project requirements.</p>
 							</article>
