--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
+				<a class="image featured"><img src="iE-LOGO-1024x267.png" alt="" /></a>
 				<div class="container medium">
 
 					<div class="row">
