--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#projects" class="text-white hover:text-[#793fff] duration-500">Projects</a>
             </li>
             <li class="mx-4 my-4 md:my-0">
-                <button class="bg-[#793fff] shadow-lg shadow-[#793fff]/30 text-white h-8 w-32 rounded-[5px]">👋 Contact</button>
+                <button class="bg-[#793fff] shadow-lg shadow-[#793fff]/30 text-white h-8 w-32 rounded-[5px]">Contact</button>
             </li>
         </ul>
     </nav>
@@ -77,7 +77,7 @@
                         Contact Me
                     </button>
                     <button class="border border-[#793fff] text-white px-6 py-3 rounded-lg hover:bg-[#793fff]/10 transition-all duration-300">
-                        View Portfolio
+                       <a href="#projects">View Portfolio</a>
                     </button>
                 </div>
 
@@ -209,7 +209,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-bold text-white mb-2">Eyetracking</h3>
                     <p class="text-gray-400 text-sm mb-4">Analysis of participant attention and emotional responses to "Arctic Sea Ice Decline" map using eye-tracking technology.</p>
-                    <a href="#" class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300">
+                    <a href="eyetracking.html" class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300">
                         View Project
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
@@ -278,7 +278,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-bold text-white mb-2">Radar Analysis</h3>
                     <p class="text-gray-400 text-sm mb-4">Displacement mapping using Sentinel-1 SAR datasets for geohazard assessment.</p>
-                    <a href="#" class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300">
+                    <a href="radar.html" class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300">
                         View Project
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
