--- a/radar.html
+++ b/radar.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="md:flex md:items-center md:z-auto md:static bg-[#21212e] absolute w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500"> <!--z-[-1]-->
             <li class="mx-4 my-4 md:my-0">
-                <a href="#" class="text-white hover:text-[#793fff] duration-500">Home</a>
+                <a href="/" class="text-white hover:text-[#793fff] duration-500">Home</a>
             </li>
             <li class="mx-4 my-4 md:my-0">
                 <a href="#about" class="text-white hover:text-[#793fff] duration-500">About</a>
@@ -162,5 +162,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
