--- a/eyetracking.html
+++ b/eyetracking.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eye Tracking Research</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -10,51 +11,39 @@
         body {
             font-family: 'Poppins', sans-serif;
         }
+        @media (max-width: 768px) {
+            .profile-sticky {
+                position: static !important;
+            }
+        }
     </style>
 </head>
 <body class="bg-[#06021A] min-h-screen text-gray-200">
-    <nav class="bg-[#21212e] py-3 md:flex md:items-center md:justify-between">
-        <div class="flex items-center justify-between mx-10 my-2">
-            <img src="images/pic00.png" class="select-none h-[40px] w-[40px]">
-            <span class="-mx-[1px] text-2xl cursor-pointer text-[#793fff] px-[10px]"><b>sanjida</b></span>
-            <span class="text-3xl cursor-pointer text-[#793fff] md:hidden block"><ion-icon name="menu-outline" onclick="Menu(this)"></ion-icon></span>
-        </div>
-        <ul class="md:flex md:items-center md:z-auto md:static bg-[#21212e] absolute w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500"> <!--z-[-1]-->
-            <li class="mx-4 my-4 md:my-0">
-                <a href="/" class="text-white hover:text-[#793fff] duration-500">Home</a>
-            </li>
-            <li class="mx-4 my-4 md:my-0">
-                <a href="#about" class="text-white hover:text-[#793fff] duration-500">About</a>
-            </li>
-            <li class="mx-4 my-4 md:my-0">
-                <a href="#" class="text-white hover:text-[#793fff] duration-500">Experience</a>
-            </li>
-            <li class="mx-4 my-4 md:my-0">
-                <a href="#projects" class="text-white hover:text-[#793fff] duration-500">Projects</a>
-            </li>
-            <li class="mx-4 my-4 md:my-0">
-                <button class="bg-[#793fff] shadow-lg shadow-[#793fff]/30 text-white h-8 w-32 rounded-[5px]">Contact</button>
-            </li>
-        </ul>
-    </nav>
-    <div class="container mx-auto p-8">
-        <div class="grid md:grid-cols-3 gap-8">
+    <div class="container mx-auto p-4 md:p-8">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
             <!-- Left Side - Researcher Profile -->
             <div class="md:col-span-1">
-                <div class="bg-gray-900 rounded-xl p-6 shadow-lg sticky top-8">
+                <div class="bg-gray-900 rounded-xl p-4 md:p-6 shadow-lg profile-sticky md:sticky md:top-8">
                     <!-- Profile Image -->
-                    <div class="mb-6">
-                        <img src="images/pic00.png" alt="Researcher Profile" class="rounded-full w-48 h-48 mx-auto border-4 border-blue-500 shadow-lg"/>
+                    <div class="mb-4 md:mb-6">
+                        <img src="images/pic00.png" alt="Researcher Profile" class="rounded-full w-32 md:w-48 h-32 md:h-48 mx-auto border-4 border-blue-500 shadow-lg"/>
                     </div>
 
                     <!-- Profile Info -->
                     <div class="space-y-4">
-                        <h1 class="text-2xl font-bold text-blue-400 text-center">Sanjida Suchi</h1>
-                        <p class="text-blue-300 text-center font-medium">Geospatial Researcher</p>
+                       <a href="/"> <h1 class="text-xl md:text-2xl font-bold text-blue-400 text-center">Sanjida Suchi</h1>
+                        <p class="text-blue-300 text-center font-medium text-sm md:text-base">Geospatial Researcher</p></a>
+                          <!-- Logos Section -->
+    <div class="flex justify-between flex-wrap items-center gap-4 py-3">
+        <img src="images/logo1.jpg" alt="Logo 1" class="w-20 h-12">
+        <img src="images/logo2.png" alt="Logo 2" class="w-20 bg-white p-1 h-12">
+        <img src="images/logo3.png" alt="Logo 3" class="w-20 bg-white h-12">
+        <img src="images/logo4.jpg" alt="Logo 4" class="w-28 h-12">
+    </div>
                         
                         <div class="border-t border-gray-700 pt-4">
-                            <h2 class="text-lg font-semibold mb-2 text-blue-400">Research Focus</h2>
-                            <ul class="space-y-2 text-gray-300">
+                            <h2 class="text-base md:text-lg font-semibold mb-2 text-blue-400">Research Focus</h2>
+                            <ul class="space-y-1 md:space-y-2 text-gray-300 text-sm md:text-base">
                                 <li>• Eye-tracking Analysis</li>
                                 <li>• Visual Attention Studies</li>
                                 <li>• User Experience Research</li>
@@ -63,8 +52,8 @@
                         </div>
 
                         <div class="border-t border-gray-700 pt-4">
-                            <h2 class="text-lg font-semibold mb-2 text-blue-400">Tools & Technologies</h2>
-                            <ul class="space-y-2 text-gray-300">
+                            <h2 class="text-base md:text-lg font-semibold mb-2 text-blue-400">Tools & Technologies</h2>
+                            <ul class="space-y-1 md:space-y-2 text-gray-300 text-sm md:text-base">
                                 <li>• RealEye Software</li>
                                 <li>• Heatmap Analysis</li>
                                 <li>• Data Visualization</li>
@@ -73,8 +62,8 @@
                         </div>
 
                         <div class="border-t border-gray-700 pt-4">
-                            <h2 class="text-lg font-semibold mb-2 text-blue-400">Project ID</h2>
-                            <div class="text-gray-300">
+                            <h2 class="text-base md:text-lg font-semibold mb-2 text-blue-400">Project ID</h2>
+                            <div class="text-gray-300 text-sm md:text-base">
                                 <p>Research ID: 0119445</p>
                                 <p>Focus Area: Arctic Sea Ice Decline</p>
                                 <p>Study Type: User Interaction Analysis</p>
@@ -86,34 +75,34 @@
 
             <!-- Right Side - Research Content -->
             <div class="md:col-span-2">
-                <div class="space-y-8">
+                <div class="space-y-6 md:space-y-8">
                     <!-- Research Header -->
-                    <div class="bg-gray-900 rounded-xl p-8 shadow-lg">
-                        <h2 class="text-3xl font-bold text-blue-400 mb-4">Eye Tracking and Image Evaluation</h2>
-                        <p class="text-gray-300 mb-4">A Study on Visual Attention Patterns in Arctic Sea Ice Decline Map Analysis</p>
-                        <div class="mt-4 flex flex-wrap gap-4">
-                            <span class="bg-blue-900 text-blue-200 px-3 py-1 rounded-full text-sm">Eye Tracking</span>
-                            <span class="bg-blue-900 text-blue-200 px-3 py-1 rounded-full text-sm">Attention Analysis</span>
-                            <span class="bg-blue-900 text-blue-200 px-3 py-1 rounded-full text-sm">Emotional Response</span>
-                            <span class="bg-blue-900 text-blue-200 px-3 py-1 rounded-full text-sm">Visual Cognition</span>
+                    <div class="bg-gray-900 rounded-xl p-4 md:p-8 shadow-lg">
+                        <h2 class="text-xl md:text-3xl font-bold text-blue-400 mb-3 md:mb-4">Eye Tracking and Image Evaluation</h2>
+                        <p class="text-gray-300 mb-3 md:mb-4 text-sm md:text-base">A Study on Visual Attention Patterns in Arctic Sea Ice Decline Map Analysis</p>
+                        <div class="mt-4 flex flex-wrap gap-2 md:gap-4">
+                            <span class="bg-blue-900 text-blue-200 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Eye Tracking</span>
+                            <span class="bg-blue-900 text-blue-200 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Attention Analysis</span>
+                            <span class="bg-blue-900 text-blue-200 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Emotional Response</span>
+                            <span class="bg-blue-900 text-blue-200 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Visual Cognition</span>
                         </div>
                     </div>
 
                     <!-- Research Objectives -->
-                    <div class="bg-gray-900 rounded-xl p-8 shadow-lg">
-                        <h3 class="text-2xl font-semibold text-blue-400 mb-4">Research Objectives</h3>
-                        <div class="grid md:grid-cols-2 gap-6">
-                            <div class="bg-gray-800 p-6 rounded-lg">
-                                <h4 class="text-xl font-semibold text-blue-300 mb-3">Primary Goals</h4>
-                                <ul class="text-gray-300 space-y-2">
+                    <div class="bg-gray-900 rounded-xl p-4 md:p-8 shadow-lg">
+                        <h3 class="text-lg md:text-2xl font-semibold text-blue-400 mb-4">Research Objectives</h3>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6">
+                            <div class="bg-gray-800 p-4 md:p-6 rounded-lg">
+                                <h4 class="text-base md:text-xl font-semibold text-blue-300 mb-3">Primary Goals</h4>
+                                <ul class="text-gray-300 space-y-2 text-sm md:text-base">
                                     <li>• Track participant eye movements during map interaction</li>
                                     <li>• Analyze attention distribution patterns</li>
                                     <li>• Evaluate emotional responses to visual stimuli</li>
                                 </ul>
                             </div>
-                            <div class="bg-gray-800 p-6 rounded-lg">
-                                <h4 class="text-xl font-semibold text-blue-300 mb-3">Data Quality</h4>
-                                <ul class="text-gray-300 space-y-2">
+                            <div class="bg-gray-800 p-4 md:p-6 rounded-lg">
+                                <h4 class="text-base md:text-xl font-semibold text-blue-300 mb-3">Data Quality</h4>
+                                <ul class="text-gray-300 space-y-2 text-sm md:text-base">
                                     <li>• Ensure eye-tracking data integrity</li>
                                     <li>• Validate emotional response measurements</li>
                                     <li>• Maintain high sampling rate accuracy</li>
@@ -123,25 +112,33 @@
                     </div>
 
                     <!-- Methodology & Findings -->
-                    <div class="bg-gray-900 rounded-xl p-8 shadow-lg">
-                        <h3 class="text-2xl font-semibold text-blue-400 mb-6">Key Findings</h3>
-                        <div class="space-y-6">
-                            <div class="bg-gray-800 p-6 rounded-lg">
-                                <h4 class="text-xl font-semibold text-blue-300 mb-3">Heatmap Analysis</h4>
-                                <p class="text-gray-300 mb-4">
+                    <div class="bg-gray-900 rounded-xl p-4 md:p-8 shadow-lg">
+                        <h3 class="text-lg md:text-2xl font-semibold text-blue-400 mb-4 md:mb-6">Key Findings</h3>
+                        <div class="space-y-4 md:space-y-6">
+                            <div class="bg-gray-800 p-4 md:p-6 rounded-lg">
+                                <figure class="mb-4">
+                                    <img src="images/heatmap.png" alt="Heatmap Analysis" class="w-full rounded-lg">
+                                    <figcaption class="text-gray-400 text-center mt-2">Figure 1: Heatmap- Attention Map</figcaption>
+                                </figure>
+                                <h4 class="text-base md:text-xl font-semibold text-blue-300 mb-3">Heatmap Analysis</h4>
+                                <p class="text-gray-300 mb-4 text-sm md:text-base">
                                     The heatmap visualization revealed distinct patterns in participant attention:
                                 </p>
-                                <ul class="list-disc list-inside text-gray-300 space-y-2">
+                                <ul class="list-disc list-inside text-gray-300 space-y-2 text-sm md:text-base">
                                     <li>Yellow and red zones indicated high fixation areas</li>
                                     <li>Blue and green tones showed areas of lower attention</li>
                                     <li>Clear correlation between legend changes and attention patterns</li>
                                 </ul>
                             </div>
                             
-                            <div class="bg-gray-800 p-6 rounded-lg">
-                                <h4 class="text-xl font-semibold text-blue-300 mb-3">Emotional Response Data</h4>
-                                <p class="text-gray-300 mb-4">Analysis of emotional fluctuations revealed:</p>
-                                <ul class="list-disc list-inside text-gray-300 space-y-2">
+                            <div class="bg-gray-800 p-4 md:p-6 rounded-lg">
+                                <figure class="mb-4">
+                                    <img src="images/emotional.png" alt="Emotional Engagement" class="w-full rounded-lg">
+                                    <figcaption class="text-gray-400 text-center mt-2">Figure 1: Emotional Engagement</figcaption>
+                                </figure>
+                                <h4 class="text-base md:text-xl font-semibold text-blue-300 mb-3">Emotional Response Data</h4>
+                                <p class="text-gray-300 mb-4 text-sm md:text-base">Analysis of emotional fluctuations revealed:</p>
+                                <ul class="list-disc list-inside text-gray-300 space-y-2 text-sm md:text-base">
                                     <li>Tracked "happy" and "surprise" emotional states</li>
                                     <li>K-coefficient peaks indicating heightened engagement</li>
                                     <li>Correlation between visual elements and emotional responses</li>
@@ -151,20 +148,20 @@
                     </div>
 
                     <!-- Technical Details -->
-                    <div class="bg-gray-900 rounded-xl p-8 shadow-lg">
-                        <h3 class="text-2xl font-semibold text-blue-400 mb-4">Technical Implementation</h3>
-                        <div class="grid md:grid-cols-2 gap-6">
-                            <div class="bg-gray-800 p-6 rounded-lg">
-                                <h4 class="text-xl font-semibold text-blue-300 mb-3">Data Collection</h4>
-                                <ul class="text-gray-300 space-y-2">
+                    <div class="bg-gray-900 rounded-xl p-4 md:p-8 shadow-lg">
+                        <h3 class="text-lg md:text-2xl font-semibold text-blue-400 mb-4">Technical Implementation</h3>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6">
+                            <div class="bg-gray-800 p-4 md:p-6 rounded-lg">
+                                <h4 class="text-base md:text-xl font-semibold text-blue-300 mb-3">Data Collection</h4>
+                                <ul class="text-gray-300 space-y-2 text-sm md:text-base">
                                     <li>• RealEye software implementation</li>
                                     <li>• Continuous gaze tracking</li>
                                     <li>• High-precision sampling rate</li>
                                 </ul>
                             </div>
-                            <div class="bg-gray-800 p-6 rounded-lg">
-                                <h4 class="text-xl font-semibold text-blue-300 mb-3">Quality Metrics</h4>
-                                <ul class="text-gray-300 space-y-2">
+                            <div class="bg-gray-800 p-4 md:p-6 rounded-lg">
+                                <h4 class="text-base md:text-xl font-semibold text-blue-300 mb-3">Quality Metrics</h4>
+                                <ul class="text-gray-300 space-y-2 text-sm md:text-base">
                                     <li>• E-T Data Grade: Perfect rating</li>
                                     <li>• Gaze tracking integrity: High accuracy</li>
                                     <li>• Screen involvement: Consistent</li>
@@ -174,9 +171,9 @@
                     </div>
 
                     <!-- Conclusions -->
-                    <div class="bg-gray-900 rounded-xl p-8 shadow-lg">
-                        <h3 class="text-2xl font-semibold text-blue-400 mb-4">Research Impact</h3>
-                        <p class="text-gray-300 leading-relaxed">
+                    <div class="bg-gray-900 rounded-xl p-4 md:p-8 shadow-lg">
+                        <h3 class="text-lg md:text-2xl font-semibold text-blue-400 mb-4">Research Impact</h3>
+                        <p class="text-gray-300 leading-relaxed text-sm md:text-base">
                             The eye-tracking survey provided valuable insights into participant attention and emotional responses to the "Arctic Sea Ice Decline" map. The use of heatmaps and Areas of Interest (AOIs) revealed key areas of visual focus, while emotional analysis added depth to understanding viewer interactions. The high-quality eye-tracking data ensures the credibility of findings and supports further exploration into visual cognitive processes.
                         </p>
                     </div>
