issovis page added

--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@ During the first year of my program, I have explored a broad range of subjects, 
                         </div>
                     </div>
                     <div class="md:p-6 p-2">
-                        <h3 class="text-xl font-bold text-white mb-2 md:h-20">Seeing Through Lies: Mapping Trust in the Age of Misinformation</h3>
-                        <p class="text-gray-400 text-sm mb-4">Urban area identification using Sentinel-2 data with NDVI, NDWI, and NDBI indices.The ISSonVIS 2025 was an intensive, interdisciplinary spring school focused on understanding the power and responsibility of visual communication in the context of digital misinformation. Under the theme “Seeing Through Lies”, the course explored how spatial and data visualizations can build or break trust, and how visual storytelling intersects with ethics, perception, and the politics of truth.</p>
+                        <h3 class="text-xl font-bold text-white mb-2 md:h-20">International Spring School on Visualization (ISSonVIS 2025)</h3>
+                        <p class="text-gray-400 text-sm mb-4">The ISSonVIS 2025 was an intensive, interdisciplinary spring school focused on understanding the power and responsibility of visual communication in the context of digital misinformation. Under the theme “Seeing Through Lies”, the course explored how spatial and data visualizations can build or break trust, and how visual storytelling intersects with ethics, perception, and the politics of truth.</p>
                         <div class="flex md:flex-row flex-col gap-3 justify-between  items-center flex-1">
-                            <a href="#" target="_blank" class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300">
+                            <a href="issonvis.html" target="_blank" class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300">
                                 View Project
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
