IMAGE BORDER COLOR CHANGE

--- a/bip.html
+++ b/bip.html
@@ -21,7 +21,7 @@
                 <div class="bg-gray-900 rounded-xl p-6 shadow-lg profile-sticky md:sticky md:top-8">
                     <!-- Profile Image -->
                     <div class="mb-6">
-                        <img src="/images/pic00.png" alt="Participant Profile" class="rounded-full w-24 md:w-48 h-24 md:h-48 mx-auto border-4 border-[#28a745] shadow-lg"/>
+                        <img src="/images/pic00.png" alt="Participant Profile" class="rounded-full w-24 md:w-48 h-24 md:h-48 mx-auto border-4 border-[#793fff] shadow-lg"/>
                     </div>
 
                     <!-- Profile Info -->
