--- a/index.html
+++ b/index.html
@@ -464,6 +464,90 @@
         id="projects"
         class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
       >
+
+      <!-- Remote Sensing Internship -->
+      <div
+  class="group bg-[#21212e] rounded-xl overflow-hidden hover:shadow-2xl hover:shadow-[#793fff]/20 transition-all duration-300"
+>
+  <div class="relative overflow-hidden">
+    <div
+      class="h-48 bg-gradient-to-r from-[#793fff]/80 to-indigo-600/80 group-hover:scale-105 transition-transform duration-300"
+    >
+      <div class="absolute inset-0 flex items-center justify-center">
+        <img
+          src="images/certificate-landsat.png"
+          alt="Remote Sensing Landslide Internship"
+          class="object-cover md:h-[250px] md:w-[410px]"
+        />
+      </div>
+    </div>
+  </div>
+  <div class="md:p-6 p-2">
+    <h3 class="text-xl font-bold text-white mb-2 md:h-20">
+      Remote Sensing-Based Mapping and Analysis of Landslides to Support
+      Humanitarian Aid
+    </h3>
+    <h3 class="text-gray-200 text-sm mb-2 font-medium"> Internship | April – June 2024 | Z_GIS, University of Salzburg (PLUS),
+      Austria</h3>
+      <p class="text-gray-400 text-sm mb-4">
+      I worked within the Earth Observation & Natural Hazards Research Group on
+      landslide mapping and disaster risk reduction in Malawi, Madagascar, and
+      Mozambique after Cyclone Freddy (2023). Key tasks included compiling GIS
+      datasets, manual landslide digitization, Google Earth Engine workflows
+      (NDVI & Sentinel-1), testing ESA Charter Mapper, and contributing to AGIT
+      conference dissemination. Results produced included digitized landslide
+      polygons, NDVI-based change detection, validation datasets, and workflow
+      documentation to support humanitarian aid operations.
+    </p>
+    <div
+      class="flex md:flex-row flex-col gap-3 justify-between items-center flex-1"
+    >
+      <a
+        href="internship.html"
+        target="_blank"
+        class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300"
+      >
+        View Project
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4 ml-2"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"
+          />
+        </svg>
+      </a>
+      <a
+        href="Internship-Report.pdf"
+        target="_blank"
+        class="inline-flex items-center text-[#793fff] hover:text-white transition-colors duration-300"
+      >
+        Download PDF
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4 ml-2"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"
+          />
+        </svg>
+      </a>
+    </div>
+  </div>
+</div>
+
         <!-- EO Browser Assignment -->
         <div
           class="group bg-[#21212e] rounded-xl overflow-hidden hover:shadow-2xl hover:shadow-[#793fff]/20 transition-all duration-300"
