internship image added

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     >
       <div class="absolute inset-0 flex items-center justify-center">
         <img
-          src="images/certificate-landsat.png"
+          src="images/internship.jpg"
           alt="Remote Sensing Landslide Internship"
           class="object-cover md:h-[250px] md:w-[410px]"
         />
@@ -487,7 +487,7 @@
       Remote Sensing-Based Mapping and Analysis of Landslides to Support
       Humanitarian Aid
     </h3>
-    <h3 class="text-gray-200 text-sm mb-2 font-medium"> Internship | April – June 2024 | Z_GIS, University of Salzburg (PLUS),
+    <h3 class="text-gray-200 text-sm mb-2 font-medium"> Internship | April – June 2025 | Z_GIS, University of Salzburg (PLUS),
       Austria</h3>
       <p class="text-gray-400 text-sm mb-4">
       I worked within the Earth Observation & Natural Hazards Research Group on
