--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DDNF6SJW06"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DDNF6SJW06');
+</script>
   <body class="bg-[#06021a]">
     <nav class="bg-[#21212e] py-3 md:flex md:items-center md:justify-between">
       <div class="flex items-center justify-between mx-10 my-2">
@@ -1628,3 +1637,4 @@
     </script>
   </body>
 </html>
+
